force-app/main/default/objects/Element__c/Element__c.object-meta.xml
<CustomObject>
    <label>Element</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>