force-app/main/default/objects/Element__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <label>Page</label>
    <referenceTo>Page__c</referenceTo>
    <relationshipLabel>Elements</relationshipLabel>
    <relationshipName>Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>