force-app/main/default/objects/Element__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>