force-app/main/default/objects/Element__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>rating</fullName>
            </value>
            <value>
                <fullName>dropdown</fullName>
            </value>
            <value>
                <fullName>comment</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>radiogroup</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>