force-app/main/default/objects/Element__c/fields/VisibleIf__c.field-meta.xml
<CustomField>
    <fullName>VisibleIf__c</fullName>
    <label>Visible If</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 